# seeq-addon-templates

./: .gitignore  README.md  addon  addon.bat  entrypoint.py  install_template  install_template.bat  pyproject.toml  requirements.txt  uninstall_template  uninstall_template.bat  variables.bat  variables.sh
addon_template/: add_on_tool.yaml  copier.yaml  data_lab_functions.yaml  formula_package.yaml  generator.py  plugin.yaml  tool_pane_plugin.yaml
addon_template/_dev_tools/: utils.py
addon_template/_dev_tools/addon_tasks/: __init__.py  add_on_manager_session.py  bootstrap.py  build.py  deploy.py  element_protocol.py  license.py  logs.py  package.py  testing.py  utils.py  watch.py
addon_template/_dev_tools/defaults/data_lab_project/: element.py
addon_template/_dev_tools/defaults/formula_package/: element.py
addon_template/_dev_tools/tests/: test_utils.py
addon_template/addon/: {% if project_license == 'GNU General Public License' %}LICENSE{% endif %}.jinja
addon_template/addon/includes/: slug.jinja
addon_template/addon/{% if 'DataLabFunctions' in elements_to_include %}{% from pathjoin('includes', 'slug.jinja') import slugify %}{{ slugify(project_name) }}-data-lab-functions{% endif %}/: README.md  api.ipynb
addon_template/addon_example/: README.md.jinja  addon.json.jinja  addon.py  addon_config.json.jinja  gitignore  requirements.txt  {% if project_license == '3-clause BSD License' %}LICENSE{% endif %}.jinja  {% if project_license == 'Custom License' %}LICENSE{% endif %}.jinja
addon_template/includes/: slug.jinja
(+9 files in other folders)
