[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "addon"
version = "0.0.1"

[project.entry-points.console_scripts]
addon = "addon_template.generator:main"

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
addon_template = [
    "**/*",
    "includes/*",
    "addon_example/**/*"
]

[tool.setuptools.exclude-package-data]
addon_template = ["__pycache__"]
"addon_template._dev_tools" = ["__pycache__"]
